--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,22 @@
+os:
+  - linux
+
 language: java
-sudo : false
-script: 
-        - echo "Hello World"
+
+addons:
+  apt:
+    packages:
+    - cmake
+    - time
+
+before_install:
+  - echo "Before Install"
+install:
+  - echo "Install"
+before_script:
+  - echo "Before Script"
+script:
+  - echo "Script"
 
 notifications:
   slack: deepan10:nTGqbkpHVVQ159ViRSnpQIjv
