openssl-devel added

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ language: java
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install openssl
-  
+  - sudo apt-get install openssl openssl-devel
+
 install:
   - sudo wget https://mirror.openshift.com/pub/openshift-v3/clients/3.11.16/linux/oc.tar.gz
   - sudo tar -xvf oc.tar.gz -C /usr/bin/
