libssl-dev added

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ language: java
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install openssl openssl-devel
+  - sudo apt-get install openssl libssl-dev
 
 install:
   - sudo wget https://mirror.openshift.com/pub/openshift-v3/clients/3.11.16/linux/oc.tar.gz
