--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ language: java
 before_install:
   - sudo apt-get update  
   - sudo apt-get install openssl libssl-dev libssl1.0  
-  - ls -lrt  /usr/lib/x86_64-linux-gnu/libssl*
+  - sudo ln -s /usr/lib/x86_64-linux-gnu/libcrypto.so.1.0.0 /usr/lib/libcrypto.so.10
+  - ls -lrt  /usr/lib/x86_64-linux-gnu/libcrypto*  
 
 install:
   - sudo wget https://mirror.openshift.com/pub/openshift-v3/clients/3.11.16/linux/oc.tar.gz
