--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ language: java
 
 before_install:
   - sudo apt-get update -y 
-  - sudo apt-get install openssl libssl-dev libssl1.0  -y 
+  - sudo apt-get install openssl libssl-dev build-essential libssl1.0  -y 
   - sudo ls -lrt  /usr/lib/x86_64-linux-gnu/libcrypto* 
-  - sudo ln -s /usr/lib/x86_64-linux-gnu/libcrypto.so.1.0.0 /usr/lib/libcrypto.so.10
+  - sudo ln -s /usr/lib/x86_64-linux-gnu/libcrypto.so.0.9.8 /usr/lib/libcrypto.so.10
   - sudo ls -lrt  /usr/lib/x86_64-linux-gnu/libcrypto*  
 
 install:
