--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,12 @@ before_install:
   - sudo apt-get update -y 
   - sudo apt-get install openssl libssl-dev build-essential libssl1.0  -y 
   - sudo ls -lrt  /usr/lib/x86_64-linux-gnu/libcrypto* 
+  - sudo openssl version
   - sudo ln -s /usr/lib/x86_64-linux-gnu/libcrypto.so.0.9.8 /usr/lib/libcrypto.so.10
   - sudo ls -lrt  /usr/lib/x86_64-linux-gnu/libcrypto*  
 
 install:
-  - sudo wget https://mirror.openshift.com/pub/openshift-v3/clients/3.11.16/linux/oc.tar.gz
+  - sudo wget https://mirror.openshift.com/pub/openshift-v3/clients/3.11.0-0.9.0/linux/oc.tar.gz
   - sudo tar -xvf oc.tar.gz -C /usr/bin/
 before_script:
   - echo "Before Script"
