--- a/.travis.yml
+++ b/.travis.yml
@@ -20,13 +20,22 @@ language: java
 #  - sudo ln -s /usr/lib/x86_64-linux-gnu/libssl.so.0.9.8 /usr/lib/libssl.so.10
 #  - sudo ls -lrt  /usr/lib/libcrypto*  
 
-install:
-  - sudo wget https://mirror.openshift.com/pub/openshift-v3/clients/3.10.1/linux/oc.tar.gz
-  - sudo tar -xvf oc.tar.gz -C /usr/bin/
-before_script:
-  - echo "Before Script"
-script:
-  - oc version
+#install:
+#  - sudo wget https://mirror.openshift.com/pub/openshift-v3/clients/3.10.1/linux/oc.tar.gz
+#  - sudo tar -xvf oc.tar.gz -C /usr/bin/
+#before_script:
+#  - echo "Before Script"
+#script:
+#  - oc version
+
+jobs:
+  include:
+    - stage: build
+      script: echo 'build'
+    - stage: test
+      script: echo 'test'
+    - stage: sonar
+      script: echo 'sonar'
 
 notifications:
   slack: deepan10:nTGqbkpHVVQ159ViRSnpQIjv
